--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".charlistpage_activity"
+            android:exported="false" />
+        <activity
             android:name=".CharcterListActivity"
             android:exported="false" />
         <activity
